# gitea-actions-minimal-demo

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AI_READABILITY_TEST.md  ANALYSIS_SUMMARY.md  ANALYSIS_SUMMARY_REPORT.md  ANSWER_FLOW_API_TECHNICAL_REPORT.md  ANTI_CHEAT_MECHANISM_TECHNICAL_REPORT.md  API_CALL_SEQUENCE.md  API_QUICK_REFERENCE.md  API_TECHNICAL_SPEC.json  BURPSUITE_MODE_MANUAL_SEND.md  BURP_ANALYSIS_FINDINGS_AND_RECOMMENDATIONS.md  BURP_ANALYSIS_REPORT.md  BURP_ANALYSIS_SUMMARY.md  BURP_SUITE_ANALYSIS_INDEX.md  CHANGELOG-A.md  CHANGELOG-B.md  CHANGELOG.md  CLAUDE.md  CONFIG_GUIDE.md  GENERAL_COURSE_API_AUTOMATION.md  GENERAL_COURSE_QUICK_REFERENCE.md  NAME_REPLACEMENT_ANALYSIS.md  PER_COURSE_DURATION_GUIDE.md  README.md  README_BURP_FLOW_ANALYZER.md  TEST2_DETAILED_ANALYSIS.md  TEST2_QUICK_REFERENCE.md  TEST3_EXAM_FIELD_MAPPING.json  TEST3_EXAM_MECHANISM_RESEARCH.md  TEST3_EXAM_QUICK_REFERENCE.md  TODO.md  USER_VISITS_FIELD_MAPPING.json  VERSION_2.0.1_SUMMARY.md  VISIT_DURATION_ANALYSIS.md  analyze_burp_flow.py  analyze_burp_names.py  analyze_burp_user_visits.py  (+30 more)
config/: 374604.cfg  509946.cfg  511191.cfg  511737.cfg  522673.cfg  564068.cfg  570093.cfg  661712.cfg  902504.cfg  953197.cfg  eebot.cfg  timing.json
data/: courses.json  schedule.json
docs/: AI_ASSISTANT_GUIDE-1.md  AI_ASSISTANT_GUIDE-2.md  AI_ASSISTANT_GUIDE.md  AI_COLLABORATION_METHODS_COMPARISON-1.md  AI_COLLABORATION_METHODS_COMPARISON-2.md  AI_COLLABORATION_METHODS_COMPARISON.md  AI_COLLABORATION_METHOD_1_STRUCTURED.md  AI_COLLABORATION_METHOD_2_ITERATIVE.md  AI_COLLABORATION_METHOD_3_TRANSITION.md  AI_COLLABORATION_METHOD_4_HYBRID.md  AI_COLLABORATION_METHOD_4_INDUSTRY_MAPPING.md  AI_COLLABORATION_PRACTICAL_GUIDE.md  AI_READABILITY_VERIFICATION_20251202.md  AI助手快速讀取交接文檔.md  ANDROID_HYBRID_ARCHITECTURE_EVALUATION-1.md  ANDROID_HYBRID_ARCHITECTURE_EVALUATION-2.md  ANDROID_HYBRID_ARCHITECTURE_EVALUATION.md  API_AUTO_ANSWER_FEASIBILITY_EXAM_48.md  API_DIRECT_MODE_QUICK_REFERENCE.md  ARCHITECTURE_EVALUATION_REPORT_202512012232.md  BURP_SUITE_ANALYSIS_INDEX.md  CAPTCHA_OCR_TECHNICAL_GUIDE.md  CHANGELOG.md  CI_CD_AND_TESTING_STRATEGY.md  CLAUDE_CODE_HANDOVER-1.md  CLAUDE_CODE_HANDOVER-10.md  CLAUDE_CODE_HANDOVER-11.md  CLAUDE_CODE_HANDOVER-12.md  CLAUDE_CODE_HANDOVER-13.md  CLAUDE_CODE_HANDOVER-14.md  CLAUDE_CODE_HANDOVER-2.md  CLAUDE_CODE_HANDOVER-2A.md  CLAUDE_CODE_HANDOVER-2B.md  CLAUDE_CODE_HANDOVER-3.md  CLAUDE_CODE_HANDOVER-4.md  CLAUDE_CODE_HANDOVER-5.md  CLAUDE_CODE_HANDOVER-6.md  CLAUDE_CODE_HANDOVER-7.md  CLAUDE_CODE_HANDOVER-8.md  (+81 more)
(+320 files in other folders)
